--- a/website case study/yurts.html
+++ b/website case study/yurts.html
@@ -1,7 +1,10 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-<title>			Pacific Trails Resort		</title>
-
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pacific Trails Resort :: Yurts</title>
 </head>
 <body>
 <h1>Pacific Trails Resort</h1>
@@ -12,7 +15,14 @@
 </b></div>
 
 <h2>The Yurts at Pacific Trails</h2>
-
+<dl></dl>
+<dt><b>What is a yurt?</b></dt>
+<dd>Our luxury yurts are permanent structures four feet off the ground. Each Yurt has canvas walls, a wooden floor, and a roof dome that can be opened.</dd>
+<dt><b>How are the yurts furnished?</b></dt>
+<dd>Each yurt is furnished with a queen-size bed with down quilt and gas-fired stove. The luxury camping experience also includes electricity and a sink with hot and cold running water.  Shower and restroom facilities are located in the lodge.</dd>
+<dt><b>What should I bring?</b></dt>
+<dd>Bring a sense of adventure and some time to relax! Most guests also pack comfort-able walking shoes and plan to dress for changing weather with layers of clothing.</dd>
+</dl>
 <div>
 <small> <i> Copyright  2011 Pacific Trails Resort <br>
 yourfirstname@yourlastname.com </small></i></div>
